--- a/index.html
+++ b/index.html
@@ -6,26 +6,32 @@
 <title>docker 選擇</title>
 </head>
 <style>
-.input-group{ 
- 
-    width:33%; 
- 
-    }
+
 
 </style>
 <body>
 <form action="select.php" method="POST">
-	<select name ="iso" class="btn  dropdown-toggle dropdown-toggle-split btn-lg btn-outline-dark"  >
+
+<div style="margin:30% auto auto 30%">
+<table>
+<tr>
+<td style="padding:10px 0px 10px 0px;">
+	<select name ="iso" class="btn dropdown-toggle dropdown-toggle-split btn-lg btn-outline-dark"  >
                 <option  value="ubuntu" selected>ubuntu</option>
                 <option  value="centos">centos</option>
         </select>
+</td>
 
-	<select name ="server" class="btn  dropdown-toggle btn-outline-dark btn-lg  dropdown-toggle-split" >
+<td style="padding:10px 0px 10px 250%;">
+	<select name ="server" class="btn  dropdown-toggle btn-outline-dark btn-lg  dropdown-toggle-split">
 		<option value="nginx" selected>nginx</option>
 		<option value="apach">apach</option>
 	</select>
-	
+</td>
 
+</tr>
+</table>
+</div>
 
 	<input class="btn btn-outline-dark btn-lg "  type="submit" value="送出資料">
 
