修改按鈕位置,新增h1

--- a/index.html
+++ b/index.html
@@ -10,32 +10,36 @@
 
 </style>
 <body>
+	<div style="margin:15% auto auto 30%"> <font color="red" face="DFKai-sb">
+			<i><h1>請選擇系統版本,以及預安裝伺服器</h1></i>
+		</font></div>
 <form action="select.php" method="POST">
+<div style="margin:15% auto auto 30%">
+	<table>
+	<tr>
+		<td style="padding:10px 0px 10px 0px;">
+		<select name ="iso" class="btn dropdown-toggle dropdown-toggle-split btn-lg btn-outline-dark"  >
+        	        <option  value="ubuntu" selected>ubuntu</option>
+        	        <option  value="centos">centos</option>
+       		 </select>
+		</td>
 
-<div style="margin:30% auto auto 30%">
-<table>
-<tr>
-<td style="padding:10px 0px 10px 0px;">
-	<select name ="iso" class="btn dropdown-toggle dropdown-toggle-split btn-lg btn-outline-dark"  >
-                <option  value="ubuntu" selected>ubuntu</option>
-                <option  value="centos">centos</option>
-        </select>
-</td>
-
-<td style="padding:10px 0px 10px 250%;">
-	<select name ="server" class="btn  dropdown-toggle btn-outline-dark btn-lg  dropdown-toggle-split">
-		<option value="nginx" selected>nginx</option>
-		<option value="apach">apach</option>
-	</select>
-</td>
-
-</tr>
-</table>
+		<td style="padding:10px 0px 10px 220%;">
+		<select name ="server" class="btn  dropdown-toggle btn-outline-dark btn-lg  dropdown-toggle-split">
+			<option value="nginx" selected>nginx</option>
+			<option value="apach">apach</option>
+		</select>
+		</td>	
+	</tr>
+	</table>
 </div>
-
-	<input class="btn btn-outline-dark btn-lg "  type="submit" value="送出資料">
-
+<div style="margin:0% auto auto 45%">
+		<input class="btn btn-outline-dark btn-lg "  type="submit" value="送出資料"
+</div>	
 </form>
+
+
+
 <!-- Optional JavaScript; choose one of the two! -->
 
 <!-- Option 1: Bootstrap Bundle with Popper -->
