--- a/index.html
+++ b/index.html
@@ -1,9 +1,68 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script type="text/javascript"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> <!-- 引入 jQuery -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 <meta charset="utf-8">
 <title>docker 選擇</title>
+<script>
+
+$(function(){
+  $("#but1").click(function(){
+        $.ajax({ 
+    url: "select.php", 
+    type:'POST',
+    data:{
+            "iso" : $("#iso").val(),
+	    "server" : $("#server").val()
+    },
+    //dataType:"JSON",
+    success: 
+     function(data) 
+     {               
+      alert("即將跳轉")
+      //alert(data.server)
+      if($("#server").val() == "nginx"){
+            window.location.href='http://localhost:8081';
+      }else{
+            window.location.href='http://localhost:8080';
+
+      }
+     } 
+});     
+        });
+}); 
+
+$(function(){
+  $("#but2").click(function(){
+        $.ajax({ 
+    url: "run.php", 
+    //type:'POST',
+    //data:{
+     //       "iso" : $("#iso").val(),
+     //       "server" : $("#server").val()
+    //},
+    //dataType:"JSON",
+    success: 
+     function(data) 
+     {               
+      alert("即將跳轉")
+      //alert(data.server)
+             
+      window.location.href='http://localhost:8080/test/taipei.php';
+     } 
+});     
+        });
+});
+
+
+</script>
+
+
+
+
+
 </head>
 <style>
 
@@ -13,19 +72,19 @@
 	<div style="margin:15% auto auto 30%"> <font color="red" face="DFKai-sb">
 			<i><h1>請選擇系統版本,以及預安裝伺服器</h1></i>
 		</font></div>
-<form action="select.php" method="POST">
+		<!--<form action="select.php" method="POST">-->
 <div style="margin:15% auto auto 30%">
 	<table>
 	<tr>
 		<td style="padding:10px 0px 10px 0px;">
-		<select name ="iso" class="btn dropdown-toggle dropdown-toggle-split btn-lg btn-outline-dark"  >
+		<select id ="iso" class="btn dropdown-toggle dropdown-toggle-split btn-lg btn-outline-dark"  >
         	        <option  value="ubuntu" selected>ubuntu</option>
         	        <option  value="centos">centos</option>
        		 </select>
 		</td>
 
 		<td style="padding:10px 0px 10px 220%;">
-		<select name ="server" class="btn  dropdown-toggle btn-outline-dark btn-lg  dropdown-toggle-split">
+		<select id ="server" class="btn  dropdown-toggle btn-outline-dark btn-lg  dropdown-toggle-split">
 			<option value="nginx" selected>nginx</option>
 			<option value="apach">apach</option>
 		</select>
@@ -34,9 +93,20 @@
 	</table>
 </div>
 <div style="margin:0% auto auto 45%">
-		<input class="btn btn-outline-dark btn-lg "  type="submit" value="送出資料"
-</div>	
-</form>
+
+	<button id="but1">Click me</button>
+       
+	<!--	<input class="btn btn-outline-dark btn-lg "  type="submit" value="送出資料"> -->
+</div>
+<div style="margin:5% auto auto 45%">
+
+        <button id="but2">youbike</button>
+
+        <!--    <input class="btn btn-outline-dark btn-lg "  type="submit" value="送出資料"> -->
+</div>
+
+<!--</form>-->
+
 
 
 
@@ -49,6 +119,5 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
 
 </body>
- 
 </html>
 
